--- a/src/components/MainPage/EventFilter.module.css
+++ b/src/components/MainPage/EventFilter.module.css
@@ -1,88 +1,134 @@
 .container {
-    /* background-color: #9DAFED; */
-    background: url("../../assets/bgEvents.png");
-    background-size: contain;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    padding: 20px;
-    /* border-radius: 40px; */
-    width: 100%;
-    font-family: Arial, sans-serif;
-    display: flex;
-    align-items: space-between;
-    flex-direction: column;
-    position: relative;
-        /* background-color: #9DAFED; */
-        z-index: 1;
+  background: #9DAFED;
+  background-size: contain;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding: 20px;
+  /* border-radius: 40px; */
+  width: 100%;
+  font-family: Arial, sans-serif;
+  display: flex;
+  align-items: space-between;
+  flex-direction: column;
+  position: relative;
+  /* background-color: #9DAFED; */
+  z-index: 1;
+  border-radius: 15px;
+}
 
-  }
 .title {
-    color: white;
+  color: white;
 
-font-family: 'Montserrat Alternates';
-font-style: normal;
-font-weight: 600;
-font-size: 24px;
-line-height: 78px;
-/* identical to box height */
-letter-spacing: 0.07em;
+  font-family: 'Montserrat Alternates';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 78px;
+  letter-spacing: 0.07em;
 
-color: #4D5A89;
+  color: #4D5A89;
+  margin-bottom: 2.5%;
 
 
-  }
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .filterButton {
-    background-color: #8aa78b;
-    color: white;
-    border: none;
-    padding: 16px 35px;
-    cursor: pointer;
-position: absolute;
-top: 0;
-right: 22%;
+}
 
-border-radius: 40px;
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  transform: translateY(-55px);
+}
 
-  }
-  
-  .filters {
-    /* display: flex;
+.filterButton {
+  background-color: #5A8264;
+  color: white;
+  padding: 16px 35px;
+  cursor: pointer;
+
+
+  border-radius: 40px;
+  border: #E2F6FB solid 10px;
+
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  /* identical to box height */
+
+  color: rgba(255, 255, 255, 0.85);
+
+
+}
+.geoIcon {
+  max-width: 12px;
+}
+.mapButton {
+  background-color: #8aa78b;
+  background: #5B6899;
+  border: none;
+  padding: 16px 25px;
+  cursor: pointer;
+  color: white;
+
+  border-radius: 40px;
+  border: #E2F6FB solid 10px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  /* identical to box height */
+
+  color: rgba(255, 255, 255, 0.85);
+}
+
+
+.filters {
+  /* display: flex;
     flex-direction: column; */
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .select {
-    padding: 10px;
-    border-radius: 15px;
-    border: 1px solid #ccc;
-    background: white;
-  }
-  
-  .input {
-    padding: 10px;
-    border-radius: 15px;
-    border: 1px solid #ccc;
-    background: white;
-  }
-  
-  .searchButton {
-    transform: translate(7px, 45px);
-    background-color: #687ad1;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 40px;
-    cursor: pointer;
-    width: 140px;
-    align-self: center;
-  }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.select {
+  padding: 10px;
+  border-radius: 15px;
+  border: 1px solid #ccc;
+  background: white;
+}
+
+.input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 15px;
+  border: 1px solid #ccc;
+  background: white;
+}
+
+
+.inputSub {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 39px;
+  /* identical to box height */
+
+  color: #FFFFFF;
+
+  text-align: center;
+}
+
+.searchButton {
+  transform: translate(7px, 45px);
+  background-color: #687ad1;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 40px;
+  cursor: pointer;
+  width: 140px;
+  align-self: center;
+  border: #E2F6FB solid 10px;
+
+}
